fix: home page layout fixed for wide screens (no more height stretching of page content)

--- a/client/src/features/Home/Home.module.css
+++ b/client/src/features/Home/Home.module.css
@@ -24,13 +24,13 @@
     display: flex;
     flex-direction: column;
   }
-
-  .heroSection {
-    flex: none;
+  .heroSectionWrapper {
     height: 600px;
+    flex: none;
   }
 
   .cardsSection {
+    flex: none;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     height: auto;
@@ -58,8 +58,10 @@
     display: flex;
     flex-direction: column;
     height: min-content;
+    overflow: visible;
+    max-height: none;
   }
-  .heroSection {
+  .heroSectionWrapper {
     width: 100%;
     height: min-content;
     aspect-ratio: 1 / 1;
